Changes in version 0.9.3
  - Unit tests added
  - Small bug fixes (mainly for rarely used features)
  - TODO: tau2 and lambda store and reuse

Changes in version 0.9.2
  - Check out the brand new vignette!
  - Slight change in the "front-end" function fsvsample: the argument
    "priorfacload" must now be positive, its meaning depends on the value of
    the argument "priorfacloadtype" (new argument). The argument "columnwise"
    has been removed. Sorry for any inconvenience this change may cause.
  - The structure of the argument "startfacload" to fsvsample has changed to
    match the output structure of fsvsample. Thanks to Gregor Zens for pointing
    this out. Moreover, "startlatent" and "startlatent0" were renamed to
    "startlogvar" and "startlogvar0", respectively. Sorry for any inconvenience
    this change may cause.
  - The result values of fsvsample were slightly renamed and reordered:
    f -> fac; h -> logvar; h0 -> logvar0
  - It's now possible to turn factor sampling off. This might be useful if one
    wants to include observed factors (instead of latent ones).
  - The function predloglik now takes an optional logical vector indicating
    for which component series the predictive log likelihood should be computed.
    Thanks to Stefan Voigt for pointing this out.
  - Fixed a few more typos in the documentation.
  - The function corimageplot now has a new argument: these4order.
  - Some default settings have changed:
    * priorfacloadtype = "rowwiseng" (was: "normal")
    * priorfacload = 0.1 (was 1)
    * runningstore = 6 (was: 1)
  - Arguments to fsvsample were reordered.
  - Previous default plotting function plot.fsvsdraws has been renamed to
    plotalot. New default plotting function now shows a correlation matrix.
  - New generic extractor: cormat (cormat.fsvdraws and cormat.fsvsim)
  - Fixed namespace clashes between stochvol and factorstochvol (concerned
    logret and paratraceplot); factorstochvol now DEPENDS on stochvol.